devops-machineinfo-deployment_QA.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
   name: hostinfo-deployment
   labels:
     app: hostinfo-app
spec:
   replicas: 2
   selector: 
     matchLabels:
       app: hostinfo-app
   template:
     metadata:
       labels:
         app: hostinfo-app
     spec:
       containers:
         - name: hostinfo-container
           image: nehashirsat/hostinfo:latest
           ports:
                  - name: http
                    containerPort: 9000
                    protocol: TCP
           readinessProbe:
            httpGet:
             path: /hostinfo/
             port: 9000
