devops-machineinfo-service_prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: machineinfo-service
  labels:
    app: machineinfo-app
spec:
  selector:
    app: machineinfo-app
  type: LoadBalancer
  ports:
  - protocol: TCP        
    port: 9000
    targetPort: 9000
